{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 66,
  "lineage": "e25393cb-8669-1cbe-3ee0-82a5987b5d1e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnet1association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-web-01",
            "network_security_group_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snet-web-01",
            "subnet_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-web-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.nsgsnet1.azurerm_network_security_group.nsgsnet",
            "module.snet1.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnet2association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-app-01",
            "network_security_group_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snet-app-01",
            "subnet_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-app-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.nsgsnet2.azurerm_network_security_group.nsgsnet",
            "module.snet2.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsgsnet3association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-db-01",
            "network_security_group_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snet-db-01",
            "subnet_id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-db-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.nsgsnet3.azurerm_network_security_group.nsgsnet",
            "module.snet3.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsgsnet1",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgsnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snet-web-01",
            "location": "eastus",
            "name": "nsg-eus-dev-snet-web-01",
            "resource_group_name": "rg-eus-dev-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.snet1.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsgsnet2",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgsnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snet-app-01",
            "location": "eastus",
            "name": "nsg-eus-dev-snet-app-01",
            "resource_group_name": "rg-eus-dev-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.snet2.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.nsgsnet3",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsgsnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snet-db-01",
            "location": "eastus",
            "name": "nsg-eus-dev-snet-db-01",
            "resource_group_name": "rg-eus-dev-01",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.snet3.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.snet1",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.25.3.0/28",
            "address_prefixes": [
              "172.25.3.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-web-01",
            "name": "snet-eus-dev-web-01",
            "resource_group_name": "rg-eus-dev-01",
            "virtual_network_name": "vnet-eus-dev-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.snet2",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.25.3.16/28",
            "address_prefixes": [
              "172.25.3.16/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-app-01",
            "name": "snet-eus-dev-app-01",
            "resource_group_name": "rg-eus-dev-01",
            "virtual_network_name": "vnet-eus-dev-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.snet3",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.25.3.32/28",
            "address_prefixes": [
              "172.25.3.32/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-db-01",
            "name": "snet-eus-dev-db-01",
            "resource_group_name": "rg-eus-dev-01",
            "virtual_network_name": "vnet-eus-dev-01"
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.25.3.0/24"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "22b4aa28-27a3-451f-9460-f26d7f9c9621",
            "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01",
            "location": "eastus",
            "name": "vnet-eus-dev-01",
            "resource_group_name": "rg-eus-dev-01",
            "subnet": [
              {
                "address_prefix": "172.25.3.0/28",
                "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-web-01",
                "name": "snet-eus-dev-web-01",
                "security_group": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snetmgmt-01"
              },
              {
                "address_prefix": "172.25.3.16/28",
                "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-app-01",
                "name": "snet-eus-dev-app-01",
                "security_group": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/networkSecurityGroups/nsg-eus-dev-snetad-01"
              },
              {
                "address_prefix": "172.25.3.32/28",
                "id": "/subscriptions/157d3c55-83f1-493f-8b06-472400ac04be/resourceGroups/rg-eus-dev-01/providers/Microsoft.Network/virtualNetworks/vnet-eus-dev-01/subnets/snet-eus-dev-db-01",
                "name": "snet-eus-dev-db-01"
              }
            ],
            "vm_protection_enabled": false
          },
          "dependencies": [
            "module.Resource_Group.azurerm_resource_group.rgnet"
          ]
        }
      ]
    }
  ]
}